--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -22,21 +22,10 @@
     "colab": {
       "name": "Project 1.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/felipeagarcia/StackOverflow-2020-Developer-Survey-Analysis/blob/main/Project_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -54,8 +43,17 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cUgnIn4yK8-W"
+      },
+      "source": [
+        "### Configuring plots"
+      ]
     },
     {
       "cell_type": "code",
@@ -101,8 +99,17 @@
         "                                \"axes.titlesize\":20,\n",
         "                                \"axes.labelsize\":18})\n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P7GTO30XLGcm"
+      },
+      "source": [
+        "### Loading dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -120,7 +127,7 @@
         "                                               # of the dataset\n",
         "df.head()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,6 +558,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fpTmgQgkLN99"
+      },
+      "source": [
+        "### Which were the most used languages in 2020?"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kh_6bbGcX6Qq"
@@ -564,7 +580,7 @@
         "            count.append(language)\n",
         "    return pd.Series(count)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +591,7 @@
       "source": [
         "count = count_languages(df['LanguageWorkedWith'].dropna())"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +608,7 @@
         "count.value_counts().plot.bar(grid=True);\n",
         "print(count.value_counts().idxmax())"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,6 +629,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z-VHnsxpLWUf"
+      },
+      "source": [
+        "### Does the language you work with affect your salary?"
       ]
     },
     {
@@ -638,7 +663,7 @@
         "plt.show()\n",
         "print(sorted(salaries_by_lang, key=salaries_by_lang.get, reverse=True))"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -674,7 +699,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +831,7 @@
         "print(df.shape)\n",
         "df.isna().sum()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +877,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,6 +910,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jc5eISN_LoT6"
+      },
+      "source": [
+        "### Does male developers earn more than females?"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LSaT-nRYX6Qt",
@@ -897,7 +931,7 @@
       "source": [
         "df['Gender'].dropna().value_counts().plot.bar();"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -926,7 +960,7 @@
       "source": [
         "sns.heatmap(df.corr())"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -967,7 +1001,7 @@
         "print(df[df['Gender'] == 'Man']['ConvertedComp'].mean())\n",
         "print(df[df['Gender'] == 'Woman']['ConvertedComp'].mean())"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,6 +1011,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8PU7TMUBL0oP"
+      },
+      "source": [
+        "### What features have the greatest affect on the salary?"
       ]
     },
     {
@@ -1001,7 +1044,7 @@
         "                      axis=1)\n",
         "    return X, y"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1055,7 @@
       "source": [
         "X, y = clean_data(df)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1023,7 +1066,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,6 +1079,7 @@
         "outputId": "0f23c0c5-0c03-4120-cc8d-9d0735296aa4"
       },
       "source": [
+        "# For this large dataset, a model with partial_fit() is more suitable\n",
         "model = SGDRegressor()\n",
         "epochs = 10\n",
         "train_size = len(X_train)\n",
@@ -1047,7 +1091,7 @@
         "  model.partial_fit(X_train[init: end], y_train[init: end])\n",
         "model.score(X_test, y_test)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1138,7 @@
         "    coef_dict[feat] = coef\n",
         "sorted(coef_dict, key=coef_dict.get, reverse=True)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
